# FlatSharing

./: CMakeLists.txt  README.md  plantuml.txt
Auth/: AuthHelper.cpp  AuthHelper.h
DBHelper/: DBHelper.cpp  DBHelper.h
Flat/: Flat.cpp  Flat.h
Server_class/: Server.cpp  Server.h
SmartLock/: SmartLock.cpp  SmartLock.h
User/: User.cpp  User.h
frontend_js/: index.html  package-lock.json  server.js
frontend_js/static/css/: style.css
frontend_js/templates/: auth.html  catalog.html  faq.html  flat.html  registration.html
urls/: AbstractPage.cpp  AbstractPage.h
urls/LogIn/: LoginPage.cpp  LoginPage.h
urls/RegistrationPage/: RegistrationPage.cpp
urls/RentAFlat/: RentAFlatPage.cpp  RentAFlatPage.h
urls/UserPage/: UserPage.cpp  UserPage.h
urls/flatList/: FlatListPage.cpp
